--- a/lib/events_web/templates/layout/app.html.eex
+++ b/lib/events_web/templates/layout/app.html.eex
@@ -7,30 +7,45 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Events!</title>
+    <title>Events</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
   </head>
 
   <body>
+    <!-- navbar -->
+    <nav>
+      <div class="nav-wrapper">
+	<a href="#" class="brand-logo center">Events</a>
+	<ul id="nav-mobile" class="left">
+	  <li><a href="#" data-activates="slide-out" id="sidenav-button"><i class="material-icons">menu</i></a></li>
+	</ul>
+      </div>
+    </nav>
+    <!-- /navbar -->
     <div class="container">
-      <header class="header">
-        <nav role="navigation">
-          <ul class="nav nav-pills pull-right">
-          </ul>
-        </nav>
-        <span class="logo"></span>
-      </header>
-
+      <!-- sidenav -->
+      <ul id="slide-out" class="side-nav">
+	<li><div class="user-view">
+	    <div class="background">
+              <%= img_tag(static_path(@conn,"/images/nav-background.png")) %>
+	    </div>
+	    <a href="#!user"><%= img_tag(static_path(@conn,"/images/avatar.png"), class: "circle") %></a>
+	    <a href="#!name"><span class="white-text name">John Doe</span></a>
+	    <a href="#!email"><span class="white-text email">johndoe@gmail.com</span></a>
+	</div></li>
+	<li><a href="#!"><i class="material-icons">power_settings_new</i>Log out</a></li>
+      </ul>
+      <!-- /sidenav -->
+      
       <p class="alert alert-info" role="alert"><%= get_flash(@conn, :info) %></p>
       <p class="alert alert-danger" role="alert"><%= get_flash(@conn, :error) %></p>
 
-      <main role="main">
-        <%= render @view_module, @view_template, assigns %>
-      </main>
-
+      <%= render @view_module, @view_template, assigns %>
+      
     </div> <!-- /container -->
-    <script src="<%= static_path(@conn, "/js/app.js") %>"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+    <script src="<%= static_path(@conn, "/js/app.js") %>"></script>
   </body>
 </html>
