--- a/lib/events_web/templates/event/index.html.eex
+++ b/lib/events_web/templates/event/index.html.eex
@@ -1,32 +1,81 @@
-<h2>Listing Events</h2>
+<div class="section no-pad-bot" id="index-banner">
 
-<table class="table">
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Description</th>
-      <th>Date</th>
-      <th>Duration</th>
+  </div>
 
-      <th></th>
-    </tr>
-  </thead>
-  <tbody>
-<%= for event <- @events do %>
-    <tr>
-      <td><%= event.title %></td>
-      <td><%= event.description %></td>
-      <td><%= event.date %></td>
-      <td><%= event.duration %></td>
 
-      <td class="text-right">
-        <span><%= link "Show", to: event_path(@conn, :show, event), class: "btn btn-default btn-xs" %></span>
-        <span><%= link "Edit", to: event_path(@conn, :edit, event), class: "btn btn-default btn-xs" %></span>
-        <span><%= link "Delete", to: event_path(@conn, :delete, event), method: :delete, data: [confirm: "Are you sure?"], class: "btn btn-danger btn-xs" %></span>
-      </td>
-    </tr>
-<% end %>
-  </tbody>
-</table>
+  <div class="container">
+    <div class="section">
 
-<span><%= link "New Event", to: event_path(@conn, :new) %></span>
+      <div class="row">
+        <div class="col s12">
+          <ul class="tabs">
+            <li class="tab col s6"><a href="#todos_tab">TODOS</a></li>
+            <li class="tab col s6"><a href="#mis_eventos_tab">MIS EVENTOS</a></li>
+          </ul>
+        </div>
+        <!-- TAB_TODOS -->
+        <div id="todos_tab" class="col s12" style="display: flex; flex-direction: column; min-height: 100vh;">
+          <br>
+          <%= for event <- @events do %>
+            <div class="row">
+              <div class="col s6">
+                <h6><%= event.date %></h6>
+              </div>
+              <div class="col s6">
+                <span class="new badge tooltipped" data-position="top" data-delay="50" data-tooltip="Participantes que ya confirmaron" data-badge-caption=""><i class="tiny material-icons left">person</i><%= count_participants(event) %></span>
+              </div>
+              <div class="col s12">
+                <h6><%= event.title %></h6>
+              </div>
+              <div class="col s6 offset-s6 right-align">
+                <a id="voy1" class="btn waves-effect waves-light light-green hoverable"><i class="material-icons left">thumb_up</i>Voy</a>
+              </div>
+            </div>
+            <div class="divider"></div>
+            <br>
+          <% end %>
+
+
+        </div>
+
+        <!-- TAB_MIS EVENTOS -->
+        <div id="mis_eventos_tab" class="col s12" style="display: flex; flex-direction: column; min-height: 100vh;">
+          <br>
+          <div class="row">
+            <div class="col s6">
+              <h6>29/08/2018</h6>
+            </div>
+            <div class="col s6">
+              <span class="new badge tooltipped" data-position="top" data-delay="50" data-tooltip="Participantes que ya confirmaron" data-badge-caption="">5</span>
+            </div>
+            <div class="col s12">
+              <h6>ESTE ES UN EVENTO MIO CON UN TEXTO UN POQUITO MAS LARGO QUE ANTES.</h6>
+            </div>
+            <div class="col s12 right-align">
+              <a class="btn-floating waves-effect waves-light light-blue hoverable"><i class="material-icons center">edit</i></a>
+              <a class="btn-floating waves-effect waves-light red hoverable"><i class="material-icons center">delete</i></a>
+            </div>
+          </div>
+          <div class="divider"></div>
+
+          <br>
+
+        </div>
+    </div>
+
+  </div>
+
+
+  </div>
+
+  <div class="fixed-action-btn">
+      <a class="btn-floating btn-large light-blue">
+        <i class="large material-icons">add</i>
+      </a>
+    </div>
+
+
+  <!--  Scripts-->
+  <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+  <script src="js/materialize.js"></script>
+  <script src="js/init.js"></script>
